--- a/Demos/WebForms/src/packages.config
+++ b/Demos/WebForms/src/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.4.1.9004" targetFramework="net462" />
-  <package id="GroupDocs.Comparison" version="24.7.0" targetFramework="net462" />
+  <package id="GroupDocs.Comparison" version="24.8.0" targetFramework="net462" />
   <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net462" />
   <package id="Microsoft.AspNet.FriendlyUrls" version="1.0.2" targetFramework="net462" />
   <package id="Microsoft.AspNet.FriendlyUrls.Core" version="1.0.2" targetFramework="net462" />
@@ -23,6 +23,7 @@
   <package id="Node-Kit" version="11.1.0.1" targetFramework="net462" />
   <package id="Respond" version="1.2.0" targetFramework="net462" />
   <package id="System.Drawing.Common" version="5.0.3" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net462" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net462" />
