--- a/Examples/GroupDocs.Comparison.Examples.CSharp.Framework/packages.config
+++ b/Examples/GroupDocs.Comparison.Examples.CSharp.Framework/packages.config
@@ -1,8 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GroupDocs.Comparison" version="25.7.0" targetFramework="net472" />
+  <package id="GroupDocs.Comparison" version="25.8.0" targetFramework="net472" />
+  <package id="MessagePack" version="2.5.192" targetFramework="net472" />
+  <package id="MessagePack.Annotations" version="2.5.192" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
+  <package id="Microsoft.NET.StringTools" version="17.6.3" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="6.0.0" targetFramework="net472" />
   <package id="System.Drawing.Common" version="5.0.3" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Encoding.CodePages" version="5.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
